[package]
name = "dreamland"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/azusachino/dreamland"

[[bin]]
name = "dreamland"
path = "src/main.rs"

[dependencies]
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
dioxus = "0.5"
dioxus-desktop = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
dirs = "5.0"
uuid = { version = "1.0", features = ["v4"] }
